--- a/webthing-talk/devices/templates/xtalk/base_navbar.html
+++ b/webthing-talk/devices/templates/xtalk/base_navbar.html
@@ -9,6 +9,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- reference your installed Font Awesome Free package's files here -->
+    <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
+    
     {% block additional_static_files %}{% endblock %}
 
     <title>{% block title %}X-Talk Template{% endblock %}</title>
