--- a/core/devices/templates/xtalk/base_navbar.html
+++ b/core/devices/templates/xtalk/base_navbar.html
@@ -8,11 +8,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- reference your installed Font Awesome Free package's files here -->
-    <script src="{% static 'fontawesome_free/js/all.min.js' %}"></script>
-    
     {% block additional_static_files %}{% endblock %}
 
     <title>{% block title %}X-Talk Template{% endblock %}</title>
@@ -37,7 +34,7 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle d-flex align-items-center" id="userInfoDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                     <img class="me-1" style="width: 25px; height: 25px; border-radius: 50%;" src="{% gravatar_url user.email size=25 %}" alt="{% translate "Gravatar is not available right now"%}"></img>
-                    <span class="fs-5">{{ user.username }}</span>
+                    <span class="fs-5">{{ user.email  }}</span>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userInfoDropdown" aria-expanded="false">
                     <li>
@@ -86,9 +83,8 @@
         </div>
       </div>
     {% endif %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     {% block footer_script %}
-
     {% endblock %}
   </body>
 </html>
