--- a/webthing-talk/devices/templates/xtalk/index.html
+++ b/webthing-talk/devices/templates/xtalk/index.html
@@ -90,7 +90,7 @@
           <div class="col-sm-2"><button id="check_gateway_button" type="submit" class="btn btn-primary btn-sm" formaction="/connect-gateway" disabled>Connect</button></div>
         </div>
 
-        {% if  temp_device.type == "gateway" and temp_device.checked and temp_device.connected %}
+        {% if temp_device.type == "gateway" and temp_device.connected_gateway %}
           <div class="row mb-2 align-items-center">
             <label class="col-sm-2">Gateway Device</label>
             <div class="col-sm-6">{{ form.select_device }}</div>
@@ -138,7 +138,7 @@
         {% endif %}
 
         <div class="manage-info-container ">
-          <button type="submit" formaction="/add" id="model-save" {% if not temp_device.checked and not temp_device.connected %} disabled {% endif %}>Save</button>
+          <button type="submit" formaction="/add" id="model-save" {% if not temp_device.checked or not temp_device.connected %} disabled {% endif %}>Save</button>
         </div>
       </form>
       {% endif %}
