--- a/webthing-talk/devices/templates/xtalk/index.html
+++ b/webthing-talk/devices/templates/xtalk/index.html
@@ -4,9 +4,9 @@
   <link rel="stylesheet" href="/static/main.css"/>
 {% endblock %}
 
-{% block title %} WebThing Talk {% endblock %}
+{% block title %} WebThings Talk {% endblock %}
 
-{% block xtalk_brand_name %} WebThing Talk {% endblock %}
+{% block xtalk_brand_name %} WebThings Talk {% endblock %}
 
 {% block nav_items %}
 {% endblock %}
